openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-appid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gradio-appid
  template:
    metadata:
      labels:
        app: gradio-appid
    spec:
      containers:
      - name: fastapi-container
        image: image-registry.openshift-image-registry.svc:5000/fastapi-init/gradio-appid:latest
        ports:
        - containerPort: 8000
