openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradio-appid
spec:
  selector:
    app: gradio-appid
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
